--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -12,15 +12,16 @@ body {
 .sidebar {
     padding: 0;
     margin: 1rem;
+    margin-left: 2rem;
     border-radius: 2rem;
     width: 300px;
-    height: 90%;
+    height: 95vh;
 }
 
 .sidebar-bot {
     background-color: #212121;
-    height: 90vh;
-    border-radius: 0 0 1rem 1rem;
+    height: 89vh;
+    border-radius: 0 0 2rem 2rem;
     overflow-y: auto;
     overflow-x: hidden;
     display: flex;
@@ -32,7 +33,7 @@ body {
 .sidebar-top {
     background-color: #1a1a1a;
     height: 6vh;
-    border-radius: 1rem 1rem 0 0;
+    border-radius: 2rem 2rem 0 0;
     padding: 0;
     align-items:end;
     display: flex;
@@ -41,7 +42,7 @@ body {
 
 .sidebar-btn {
     width: 145px;
-    height: 50px;
+    height: 6vh;
     background-color: #212121;
     color: #fff;
     border: none;
@@ -67,7 +68,7 @@ body {
 
 .newChat {
     margin-bottom: 20px;
-    width: 70%;
+    width: 100%;
 }
 
 .cronologia {
@@ -83,13 +84,13 @@ body {
         justify-content: flex-end;
     }
 
-    .file button, .file div, .file-selected button{
+    .file button, .file div, .file-selected button {
         width: 100%;
-        padding: 10px;
+        padding: 0.7rem 1.2rem 0.7rem 1.2rem;
         border: none;
         background-color: #333;
         color: #fff;
-        border-radius: 4px;
+        border-radius: 2rem;
         text-align: left;
         cursor: pointer;
     }
@@ -104,7 +105,7 @@ body {
 
 .file-selected {
     background-color: #888;
-    border-radius: 5px;
+    border-radius: 2rem;
 }
 
     .file-selected button {
@@ -136,13 +137,15 @@ body {
 }
 
 .chat-column {
-    height: 100vh;
+    height: 95vh;
+    margin: 1rem;
 }
+
 
 .chat {
     flex: 1;
     overflow-y: auto;
-    height: 100%;
+
     width: 70%;
     align-self:center;
     margin-left:0;
@@ -157,13 +160,13 @@ body {
 
 .character-picture-bot {
     width: 30px;
-    margin-right: 10px;
+    margin-bottom: 5px;
     border-radius: 15px;
     flex-shrink: 0;
 }
 .character-picture-user {
     width: 30px;
-    margin-left: 10px;
+    margin-bottom: 5px;
     border-radius: 15px;
     flex-shrink: 0;
     justify-self: end;
@@ -289,13 +292,13 @@ form {
 .btn {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     background-color: #28a745;
     color: white;
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 18px;
     width: 100%;
 }
 
@@ -453,10 +456,11 @@ form {
 
 ::-webkit-scrollbar {
     width: 10px;
+
 }
 
 ::-webkit-scrollbar-track {
-    background: #212121;
+    background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
