fix: cambio pulsante icona

--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
                                             <input type="hidden" name="id" value="@chat.Id" />
                                             <button>@chat.Title</button>
                                             <div class="dots-container">
-                                                <a>▪️▪️▪️</a>
+                                                <img src="img/3dots-icon.svg" alt="Alternate Text" />
                                                 <ul class="submenu">
                                                     <li class="submenu-item">
                                                         <a asp-action="ChatDelete" class="submenu-link text-danger ">Delete</a>
