Fix: tags e caricamento file senza metadata

--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -156,14 +156,12 @@
                                                 <div class="tag-group">
                                                     @if (message.DocumentUniqueNames != null)
                                                     {
-                                                        <div class="response">
-                                                            @foreach (var document in message.DocumentUniqueNames)
-                                                            {
-                                                                <div class="tag">
-                                                                    @document.Name
-                                                                </div>
-                                                            }
-                                                        </div>
+                                                        @foreach (var document in message.DocumentUniqueNames)
+                                                        {
+                                                            <div class="tag">
+                                                                🗃️ @document.Name
+                                                            </div>
+                                                        }
                                                     }
                                                 </div>
                                             </span>
