Fix: se utente non ha chat si rompeva

--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 @model client.Models.HomeModel
 @{
-    ViewData["Title"] = Model.SelectedChat.Title;
+    if (Model.SelectedChat != null)
+        ViewData["Title"] = Model.SelectedChat.Title;
 }
 
 <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
