--- a/client/client/Views/Home/Index.cshtml
+++ b/client/client/Views/Home/Index.cshtml
@@ -252,6 +252,8 @@
         </div>
     </div>
         
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/5.0.0/signalr.min.js"></script>
+    <script src="js/chatResponsive.js"></script>
     <script>
         var chatBody = document.querySelector('.chat');
         chatBody.scrollTop = chatBody.scrollHeight - chatBody.clientHeight;
