--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -205,6 +205,16 @@ body {
     justify-self: left;
 }
 
+.response pre {
+     /*Stile specifico per i paragrafi contenenti codice 
+     Ad esempio: */
+    background-color: #111;
+    border-left: 3px solid #E9CD72;
+    border-radius:0.5rem;
+    font-family: monospace;
+    padding: 10px;
+}
+
 footer {
     border-top: 1px solid #333;
     padding: 10px;
