--- a/client/client/Views/Auth/SignUp.cshtml
+++ b/client/client/Views/Auth/SignUp.cshtml
@@ -10,7 +10,7 @@
             <div class="logo">
                 <img src="~/img/logo_full_no_nome.svg" alt="Logo">
             </div>
-            <form method="post">
+            <form method="post" autocomplete="off">
                 <label asp-for="Username">Nome utente</label>
                 <input asp-for="Username" class=" entry" type="text" id="username" name="username">
 
