--- a/client/client/wwwroot/css/site.css
+++ b/client/client/wwwroot/css/site.css
@@ -494,6 +494,7 @@ form {
 /*tre puntini chat*/
 .form-file{
     display: flex;
+    
 }
 
 .dots-container {
@@ -511,13 +512,15 @@ form {
 
 .submenu {
     position: absolute;
-    width: 110px;
+    width: 10rem;
+    font-size:16px;
+    height:100px;
     background: #444;
     top: 110%;
-    padding: 20px 30px;
+    padding:10px;
     -webkit-box-shadow: 0 15px 44px rgba(140, 140, 140, 0.18);
     box-shadow: 0 15px 44px rgba(140, 140, 140, 0.18);
-    border-radius: 5px;
+    border-radius: 0.6rem;
     opacity: 0;
     visibility: hidden;
     /*-webkit-transition: all 0.3s ease-out 0s;
@@ -525,17 +528,34 @@ form {
     list-style-type: none;
 }
 
-.submenu .submenu-link {
-    color: gainsboro;
-    padding: 7px 0;
-    font-size: 14px;
-    text-decoration: none;
-}
+    .submenu .submenu-link {
+        color: gainsboro;
+        padding: 7px 0;
+        font-size: 18px;
+        text-decoration: none;
+        justify-self: center;
+    }
 
     .submenu .submenu-link:hover {
-        color: #E9CD72;
-        cursor:pointer;
+        cursor: pointer;
+        
     }
+
+    .submenu-item{
+        display:grid;
+        height:40px;
+        width: 100%;
+    }
+    submenu-item img{
+        width:40px;
+        height:40px;
+        margin-right: 10px;
+    }
+        .submenu-item:hover {
+            background-color: #555;
+            cursor: pointer;
+            border-radius: 0.6rem;
+        }
 
 .bottom-part {
     width: 70%;
